# AutomaticBinaryCroper

./: CMakeLists.txt  CTestConfig.cmake  README.md  itkAutomaticCropImageFilter.cxx  itkAutomaticCropImageFilter.h  itkautomaticcropimagefilter.cxx  main.cpp
test/: CMakeLists.txt  testmain.cpp
